# rust-futures-backoff

./: Cargo.toml  README.md
src/: action.rs  condition.rs  future.rs  lib.rs
src/strategy/: exponential_backoff.rs  fibonacci_backoff.rs  fixed_interval.rs  jitter.rs  mod.rs
