[package]
name = "futures-backoff"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Asynchronous retry strategies for futures"
license = "MIT"
repository = "https://github.com/srijs/rust-futures-backoff"
documentation = "https://docs.rs/futures-backoff"
keywords = ["futures", "retry", "backoff"]

[dependencies]
futures = "0.1.15"
futures-timer = "0.1.1"
rand = "0.4.0"

[dev-dependencies]
quickcheck = "0.6.0"
