[package]
name = "futures-backoff"
version = "0.2.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Asynchronous retry strategies for futures"
license = "MIT"
repository = "https://github.com/srijs/rust-futures-backoff"
documentation = "https://docs.rs/futures-backoff"
keywords = ["futures", "retry", "backoff"]
edition = "2018"

[dependencies]
futures = "0.3"
futures-timer = "2.0"
rand = "0.7"

[dev-dependencies]
quickcheck = "0.9.0"
